--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-Ubuntu install
+Ubuntu development dependencies install
 sudo apt-get install libxtst-dev
 sudo apt-get install libxmu-dev
+# Symbol not found error prevention via adding --disable-gpm-doc
 ./configure --disable-gpm-doc
 make
 
